--- a/templates/fiche.html.twig
+++ b/templates/fiche.html.twig
@@ -110,8 +110,8 @@
 
                     <div class="row form-group">
                         <div class="col col-md-3"><label for="file-input" class=" form-control-label ">Fichier</label></div>
-                        <div class="col-12 col-md-9"><input type="file" id="file-input" accept="image/*" n
-                        </div>ame="fichier" class="form-control-file "></div>
+                        <div class="col-12 col-md-9"><input type="file" id="file-input" accept="image/*" name="fichier" class="form-control-file "></div>
+                    </div>
                     <button type="submit" name="type" value="ajout" class="btn btn-success btn-sm">
                         <i class="fa fa-dot-circle-o"></i> Ajouter
                     </button>
