--- a/templates/fiche.html.twig
+++ b/templates/fiche.html.twig
@@ -30,6 +30,7 @@
                     <button type="submit" value="ajout" name="type" class="btn btn-success btn-sm">
                         <i class="fa fa-dot-circle-o"></i> Ajouter
                     </button>
+                    {% if(plat.id!='') %}
                     <button type="submit" value="modification" name="type" class="btn btn-warning btn-sm">
                         <i class="fa fa-ban"></i> Modifier
                     </button>
@@ -38,11 +39,14 @@
                     <button type="submit" value="suppression" name="type" class="btn btn-danger btn-sm">
                         <i class="fa fa-ban"></i> Supprimer
                     </button>
+                    {% endif %}
                 </form>
             </div>
 
         </div>
     </div>
+    {% if plat.id!='' %} }
+
     <div class="col-lg-6">
         <div class="card">
             <div class="card-header">
@@ -67,9 +71,6 @@
                     </div>
                     <button type="submit" value="ajout" name="type" class="btn btn-success btn-sm">
                         <i class="fa fa-dot-circle-o"></i> Ajouter
-                    </button>
-                    <button type="submit" value="reinitialisation" name="type" class="btn btn-danger btn-sm">
-                        <i class="fa fa-ban"></i> Reinitialiser
                     </button>
 
                 </form>
@@ -115,12 +116,10 @@
                     <button type="submit" name="type" value="ajout" class="btn btn-success btn-sm">
                         <i class="fa fa-dot-circle-o"></i> Ajouter
                     </button>
-                    <button type="submit" class="btn btn-danger btn-sm">
-                        <i class="fa fa-ban"></i> Reinitialiser
-                    </button>
 
                 </form>
             </div>
         </div>
     </div>
+    {% endif %}
 {% endblock %}
