--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -70,10 +70,10 @@
         <div class="right-panel" id="right-panel">
 
             {% block header %}
-            <header id="header" class="header">
+        <header id="header" class="header">
 
             <div class="header-menu">
-
+                <a href="{{ path('app_logout') }}">Deconnexion</a>
             </div>
 
         </header>
