suppression fichier inutile

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,7 +73,7 @@
         <header id="header" class="header">
 
             <div class="header-menu">
-                <a href="{{ path('app_logout') }}">Deconnexion</a>
+                <a href="{{ path('app_logout') }} " class="btn btn-danger " style="margin-left:87%">Deconnexion</a>
             </div>
 
         </header>
